--- a/html/index.html
+++ b/html/index.html
@@ -101,8 +101,44 @@
             <div class="container">
             </div>
         </main>
-        <footer class="">
-
+        <footer class="footer">
+    <div class="container">
+        
+            <span class="logo">
+                <img src="./images/logo.svg" width="296" height="39" alt="">
+            </span>
+        
+        <div class="row">
+            <ul class="footer__left">
+                <li class="footer__item"><a href="#">SEK til DKK</a></li>
+                <li class="footer__item"><a href="#">NOK til DKK</a></li>
+                <li class="footer__item"><a href="#">EUR til DKK</a></li>
+                <li class="footer__item"><a href="#">USD til DKK</a></li>
+                <li class="footer__item"><a href="#">GBP til DKK</a></li>
+                <li class="footer__item"><a href="#">Bitcoin kurs</a></li>
+                <li class="footer__item"><a href="#">Blog</a></li>
+            </ul>
+            <div class="footer__right">
+                <h4 class="h4-title">Valutaomregner.dk app</h4>
+                <ul class="footer__social-row">
+                    <li class="footer__social-item">
+                        <a href="#" target="_blank" rel="nofollow" aria-label="play market">
+                            <img src="./images/play-market.svg" width="37" height="39" alt="">
+                        </a>
+                    </li>
+                    <li class="footer__social-item">
+                        <a href="#" target="_blank" rel="nofollow" aria-label="appstore">
+                            <img src="./images/appstore.svg" width="37" height="39" alt="">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer__copy">
+            &#169; 2022 All Rights Reserved
+            <a class="footer__privacy" href="#">Privatlivspolitik</a>
+        </div>
+    </div>
 </footer>
 <div class="overlay js-overlay"></div>
     </div>
