--- a/html/index.html
+++ b/html/index.html
@@ -98,8 +98,35 @@
     </div> 
 </header>
         <main class="main">
-            <div class="container">
-            </div>
+            <section class="app">
+                <div class="container">
+                    <div class="app__inner">
+                        <img class="app__left" src="./images/app.png" width="290" height="420" alt="">
+                        <div class="app__heading">
+                            <h2 class="h3-title">Download the Convertthecurrency App</h2>
+                            <div class="app__text">
+                                <p>With the Convertthecurrency app you can convert more than 150 different currencies
+                                    directly from your smartphone. You can convert GBP into whatever currency you wish,
+                                    even directly from GBP to Bitcoins, or from USD to GBP or whatever currencies you
+                                    need.</p>
+                            </div>
+                        </div>
+                        <ul class="app__social">
+                            <li class="app__item">
+                                <a href="#" class="app-cart" target="_blank" rel="nofollow" aria-label="play market">
+                                    <img src="./images/play-market-lg.svg" alt="" width="205" height="52">
+                                </a>
+                            </li>
+                            <li class="app__item">
+                                <a href="#" class="app-cart" target="_blank" rel="nofollow" aria-label="appstore">
+                                    <img src="./images/appstore-lg.svg" alt="" width="205" height="52">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+
         </main>
         <footer class="footer">
     <div class="container">
@@ -122,12 +149,12 @@
                 <h4 class="h4-title">Valutaomregner.dk app</h4>
                 <ul class="footer__social-row">
                     <li class="footer__social-item">
-                        <a href="#" target="_blank" rel="nofollow" aria-label="play market">
+                        <a href="#" class="app-cart" target="_blank" rel="nofollow" aria-label="play market">
                             <img src="./images/play-market.svg" width="37" height="39" alt="">
                         </a>
                     </li>
                     <li class="footer__social-item">
-                        <a href="#" target="_blank" rel="nofollow" aria-label="appstore">
+                        <a href="#" class="app-cart" target="_blank" rel="nofollow" aria-label="appstore">
                             <img src="./images/appstore.svg" width="37" height="39" alt="">
                         </a>
                     </li>
