'add convert slider in adaptive'

--- a/html/index.html
+++ b/html/index.html
@@ -128,9 +128,10 @@
 </section>
             <section class="convert section">
     <div class="container">
-        <div class="convert__inner swiper">
+        <h2 class="hidden">Currency conversion</h2>
+        <div class="convert__inner swiper js-slider">
             <div class="row swiper-wrapper">
-                <table class="convert__table">
+                <table class="convert__table js-slider-item">
                     <caption class="h3-title">
                         Convert Danske Kroner (DKK) to US Dollar
                     </caption>
@@ -183,7 +184,7 @@
                         </tr>
                     </tbody>
                 </table>
-                <table class="convert__table">
+                <table class="convert__table js-slider-item">
                     <caption class="h3-title">
                         Convert Danske Kroner (DKK) to US Dollar
                     </caption>
@@ -236,6 +237,9 @@
                     </tr>
                     </tbody>
                 </table>
+            </div>
+            <div class="pagination-dots">
+
             </div>
         </div>
     </div>
