'add toolbar and image on artikler page'

--- a/html/author.html
+++ b/html/author.html
@@ -172,7 +172,7 @@
                                         </a>
                                         <div class="article__cart-right">
                                             <a href="#" class="article__cart-title"><h3 class="h3-title title-hover">Skal du rejse til sommer?  Brug vores valutaomregner-app</h3></a>
-                                            <ul class="blog-list article__cart-info">
+                                            <ul class="blog-list article__cart-info small-text">
                                                 <li class="blog-list__item">Author: Compriso</li>
                                                 <li class="blog-list__item">
                                                     <time>august 2nd, 2021</time>
@@ -186,7 +186,7 @@
                                         </a>
                                         <div class="article__cart-right">
                                             <a href="#" class="article__cart-title"><h3 class="h3-title title-hover">Skal du rejse til sommer?  Brug vores valutaomregner-app</h3></a>
-                                            <ul class="blog-list article__cart-info">
+                                            <ul class="blog-list article__cart-info small-text">
                                                 <li class="blog-list__item">Author: Compriso</li>
                                                 <li class="blog-list__item">
                                                     <time>august 2nd, 2021</time>
@@ -200,7 +200,7 @@
                                         </a>
                                         <div class="article__cart-right">
                                             <a href="#" class="article__cart-title"><h3 class="h3-title title-hover">Skal du rejse til sommer?  Brug vores valutaomregner-app</h3></a>
-                                            <ul class="blog-list article__cart-info">
+                                            <ul class="blog-list article__cart-info small-text">
                                                 <li class="blog-list__item">Author: Compriso</li>
                                                 <li class="blog-list__item">
                                                     <time>august 2nd, 2021</time>
@@ -214,7 +214,7 @@
                                         </a>
                                         <div class="article__cart-right">
                                             <a href="#" class="article__cart-title"><h3 class="h3-title title-hover">Skal du rejse til sommer?  Brug vores valutaomregner-app</h3></a>
-                                            <ul class="blog-list article__cart-info">
+                                            <ul class="blog-list article__cart-info small-text">
                                                 <li class="blog-list__item">Author: Compriso</li>
                                                 <li class="blog-list__item">
                                                     <time>august 2nd, 2021</time>
