--- a/html/blog.html
+++ b/html/blog.html
@@ -357,9 +357,9 @@
             <a href="#" class="article__image image-hover">
                 <img width="153" height="107" src="./images/blog/blog9.jpg" alt="">
             </a>
-            <div class="article_cart-right">
+            <div class="article__cart-right">
                 <a href="#" class="article__cart-title"><h3 class="h3-title title-hover">Hvad er den effektive kronekurs?</h3></a>
-                <time class="article__cart-info">august 2nd, 2021</time>
+                <time class="article__cart-info small-text">august 2nd, 2021</time>
             </div>
         </li>
         <li class="article__cart app-card">
@@ -368,7 +368,7 @@
             </a>
             <div class="article__cart-right">
                 <a href="#" class="article__cart-title"><h3 class="h3-title title-hover">Hvad er den effektive kronekurs?</h3></a>
-                <time class="article__cart-info">august 2nd, 2021</time>
+                <time class="article__cart-info small-text">august 2nd, 2021</time>
             </div>
         </li>
         <li class="article__cart app-card">
@@ -377,7 +377,7 @@
             </a>
             <div class="article__cart-right">
                 <a href="#" class="article__cart-title"><h3 class="h3-title title-hover">Hvad er den effektive kronekurs?</h3></a>
-                <time class="article__cart-info">august 2nd, 2021</time>
+                <time class="article__cart-info small-text">august 2nd, 2021</time>
             </div>
         </li>
         <li class="article__cart app-card">
@@ -386,7 +386,7 @@
             </a>
             <div class="article__cart-right">
                 <a href="#" class="article__cart-title"><h3 class="h3-title title-hover">Hvad er den effektive kronekurs?</h3></a>
-                <time class="article__cart-info">august 2nd, 2021</time>
+                <time class="article__cart-info small-text">august 2nd, 2021</time>
             </div>
         </li>
     </ul>
